[tool.poetry]
name = "ynabbunq"
version = "0.1.0"
description = ""
authors = ["Aucke Bos <aucke.bos97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
bunq-sdk = "^1.14.18"
SDK = "^1.0.0"
Flask = "^2.0.3"
cryptography = "^36.0.2"
ynab-python = {git = "https://github.com/deanmcgregor/ynab-python.git"}
scikit-learn = "^1.1.1"
black = "^22.3.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
